--- a/Mag3.html
+++ b/Mag3.html
@@ -11,8 +11,8 @@
 
 
 
-<a href="Artikel1.usdz" rel="ar">
-    <img src="Artikel1.png" width=200; height="200">
+<a href="/Artikel1.usdz" rel="ar">
+    <img src="/Artikel1.png" width=200; height="200">
 </a>
 
 
