--- a/Mag3.html
+++ b/Mag3.html
@@ -12,7 +12,7 @@
 
 
 <a href="/Artikel1.usdz" rel="ar">
-    <img src="/Artikel1.png" width=200; height="200">
+    <img src=">Mag3/Artikel1.png" width=200; height="200"
 </a>
 
 
