--- a/Mag3.html
+++ b/Mag3.html
@@ -17,8 +17,8 @@
 
 
 
-<a href="/Artikel2.usdz" rel="ar">
-    <img src="/Artikel2.png" width=200; height="200">
+<a href=">Mag3/Artikel2.usdz" rel="ar">
+    <img src=">Mag3/Artikel2.png" width=200; height="200">
 </a>
 
 
