--- a/Mag3.html
+++ b/Mag3.html
@@ -11,7 +11,7 @@
 
 
 
-<a href="Mag3/Artikel1.usdz" rel="ar">
+<a href="Timea98.github.io/Mag3/Artikel1.usdz" rel="ar">
     <img src="Mag3/Artikel1.png" width=200; height="200"
 </a>
 
