--- a/Mag3.html
+++ b/Mag3.html
@@ -11,8 +11,8 @@
 
 
 
-<a href="Timea98.github.io/Mag3/Artikel1.usdz" rel="ar">
-    <img src="Mag3/Artikel1.png" width=200; height="200"
+<a href="/Mag3/Artikel1.usdz" rel="ar">
+    <img src="/Mag3/Artikel1.png" width=200; height="200"
 </a>
 
 
