--- a/Mag3.html
+++ b/Mag3.html
@@ -17,25 +17,25 @@
 
 
 
-<a href=">Mag3/Artikel2.usdz" rel="ar">
-    <img src=">Mag3/Artikel2.png" width=200; height="200">
+<a href="/Mag3/Artikel2.usdz" rel="ar">
+    <img src="/Mag3/Artikel2.png" width=200; height="200">
 </a>
 
 
 
-<a href="Artikel3.usdz" rel="ar">
-    <img src="Artikel3.png" width=200; height="200">
+<a href="/Mag3/Artikel3.usdz" rel="ar">
+    <img src="/Mag3/Artikel3.png" width=200; height="200">
 </a>
 
 
 
-<a href="Artikel4.usdz" rel="ar">
-    <img src="Artikel4.png" width=200; height="200">
+<a href="/Mag3/Artikel4.usdz" rel="ar">
+    <img src="/Mag3/Artikel4.png" width=200; height="200">
 </a>
 
 
-<a href="Artikel5.usdz" rel="ar">
-    <img src="Artikel5.png" width=200; height="200">
+<a href="/Mag3/Artikel5.usdz" rel="ar">
+    <img src="/Mag3/Artikel5.png" width=200; height="200">
 </a>
 
 
